src/test/ui/parser/issue-21153.stderr
error: non-item in item list
  --> $DIR/issue-21153.rs:2:5
   |
LL | trait MyTrait<T>: Iterator {
   |                            - item list starts here
LL |     Item = T;
   |     ^^^^ non-item starts here
LL |
LL | }
   | - item list ends here

error: aborting due to previous error

