src/test/ui/parser/issue-21153.rs
trait MyTrait<T>: Iterator {
    Item = T;
    //~^ ERROR non-item in item list
}

fn main() {}
